fix grammar and change alignment on about.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,6 @@
 }
 
 .bg-container-about {
-  width: 100vw;
   background: url(../images/garage.jpg) no-repeat bottom right fixed;
   background-size: cover;
   overflow: hidden;
@@ -101,7 +100,6 @@
   background-color: rgba(0, 0, 0, 0.8);
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
-  padding-top: 30px;
 }
 
 .business-info ul {
@@ -184,6 +182,10 @@
 
 .tel-button {
     color: #3e3b3b;
+}
+
+.media {
+    display: block;
 }
 
 /*---------------------------------------------------Footer */
